--- a/Client/src/sample/app.fxml
+++ b/Client/src/sample/app.fxml
@@ -4,52 +4,48 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-          prefWidth="600.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.2-internal"
-          xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="206.0" minWidth="10.0" prefWidth="158.0"/>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="234.0" minWidth="10.0" prefWidth="234.0"/>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-        <ColumnConstraints/>
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="206.0" minWidth="10.0" prefWidth="158.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="234.0" minWidth="10.0" prefWidth="234.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+        <ColumnConstraints />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <children>
         <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #f9fbf2;" GridPane.rowSpan="4">
             <children>
                 <Label alignment="CENTER" text="STATKI" textAlignment="CENTER" wrapText="true">
                     <font>
-                        <Font name="JetBrains Mono Regular" size="13.0"/>
+                        <Font name="JetBrains Mono Regular" size="13.0" />
                     </font>
                 </Label>
-                <TextField fx:id="serverIpTextField" layoutX="1.0" layoutY="37.0" promptText="Ip serwera"/>
-                <TextField fx:id="playerNameTextField" layoutX="1.0" layoutY="69.0" promptText="Nazwa Gracza"/>
-                <Button layoutX="42.0" layoutY="107.0" onAction="#startGame" prefHeight="26.0" prefWidth="86.0"
-                        text="Graj!"/>
-                <Label fx:id="debugLabel" layoutX="2.0" layoutY="162.0" prefHeight="171.0" prefWidth="164.0"
-                       text="Debug"/>
+                <TextField fx:id="serverIpTextField" layoutX="1.0" layoutY="37.0" promptText="Server Ip" />
+                <TextField fx:id="serverPortTextField" layoutX="1.0" layoutY="69.0" promptText="Port" />
+                <TextField fx:id="playerNameTextField" layoutX="1.0" layoutY="105.0" promptText="Player Name" />
+                <Button layoutX="43.0" layoutY="156.0" onAction="#startGame" prefHeight="26.0" prefWidth="86.0" text="Play!" />
+                <Label fx:id="debugLabel" layoutX="1.0" layoutY="239.0" prefHeight="26.0" prefWidth="170.0" text="Debug" textAlignment="CENTER" />
 
             </children>
         </Pane>
-        <GridPane style="-fx-background-color: #016699;" GridPane.columnIndex="1" GridPane.columnSpan="4"
-                  GridPane.rowSpan="4">
+        <GridPane style="-fx-background-color: #016699;" GridPane.columnIndex="1" GridPane.columnSpan="4" GridPane.rowSpan="4">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
         </GridPane>
     </children>
